Localised the analytics panes. Tweaked the analytics phrases to make them a little more compact so they don't overlap as badly. Added support for Facebook to the analytics panel. Fixed a bug where language ISO codes weren't tracked properly. Fixed a bug with settings overflowing their containers on Cosora. The panel elements can now take up more room on Nox. Added some information on per-theme overrides to docs/templates.md
Added the analytics.now phrase.
Added the analytics.today phrase.
Added the analytics.days phrase.
Added the analytics.days_short phrase.
Added the analytics.months phrase.
Added the analytics.months_short phrase.

--- a/themes/cosora/public/panel.css
+++ b/themes/cosora/public/panel.css
@@ -198,6 +198,7 @@
 	float: none;
 	margin-top: auto;
 	padding-top: 14px;
+	word-break: break-all;
 }
 #panel_page_list textarea, #panel_page_edit textarea {
 	margin-top: 8px;
