--- a/themes/nox/public/panel.css
+++ b/themes/nox/public/panel.css
@@ -27,7 +27,7 @@
 
 .colstack_right {
 	background-color: #333333;
-	width: 75%;
+	width: 90%;
 	padding-top: 12px;
 	padding-right: 24px;
 	padding-bottom: 24px;
